--- a/public/group.html
+++ b/public/group.html
@@ -47,12 +47,26 @@
         </button>
     </div>
 
-    <div class="modal">
+    <div class="addBtn_modal">
         <div class="modal_content">
           <p>IMG INPUT</p>
           <p>TITLE</p>
           <p>DICRIPTION</p>
         </div>  
+    </div>
+
+    <div class="pic_modal">
+        <div class="picmodal_content">
+            <canvas class="modal_canvas"></canvas>
+            <div class="column">
+                <div class="dis">
+                    <h2>TITLE</h2>
+                    <p>UPLOADER</p>
+                    <p>DISCRIPTION</p>
+                </div>
+                <button>bit</button>
+            </div>
+        </div>
     </div>
 
     <script type="module" src="./js/group.js"></script>
